Cambios varios, en botón e imagen

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 
     <div id="pokemon_box">
-        <div id="pokemon_uno"></div>
-        <button id="pokemon_uno_boton">Aparecer</button>
+        <div class="pokebox">
+            <div id="pokemon_uno"></div>
+            <button id="pokemon_uno_boton", onclick="style.display = 'none'">Aparecer</button>
+        </div>
     </div>
     <script src="index.js"></script>
     
